Mon Mar 28 18:17:52 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, src/funclib.c, src/matrix.[ch],
	  src/genius-readline-helper.c, ve/ve-config.c, src/graphing.c:
	  Bunch of optimizations.  Use GQueues where useful, drop use of
	  g_ptr_array for matrices which saves a tiny bit of overhead and
	  will allow graceful handling of out of memory problems rather than
	  just crashing.  Optimize Combinations/Permutations quite a bit.

	* src/geniustests.txt: add some tests.

Wed Feb 16 21:12:34 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: try gnome-help if gtk_open_uri don't work (am
	  using xfce and for whatever reason it doesn't).  Also fix the
	  formatting on error/warning dialogs

Tue Nov 23 13:47:15 2010  Jiri (George) Lebl <jirka@5z.com>

	* **/*.png: optimize and quantize pngs a bit further

Mon Nov 22 15:57:18 2010  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.12

Sun Nov 07 11:48:14 2010  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, NEWS: I will be releasing 1.0.12 shortly

Sun Nov 07 11:39:40 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add recent files menu

Tue Nov 02 11:44:08 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/Makefile.am: Add the self test files that were missing to
	  EXTRA_DIST.  Thanks to Matthias Drochner of NetBSD

Thu Oct 28 16:09:42 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Don't run ps2epsi by default, and make it an option
	  on the export dialog.  ps2epsi can take really really long
	  sometimes, generate large files, and most of the time I found out
	  you don't want it anyway.
	
	* src/eval.c: fix 64 bit build

Sat Oct 09 12:23:07 2010  Jiri (George) Lebl <jirka@5z.com>

	* Makefile.am: apply patch from Dominique Leuenberger
	  (dominique at leuenberger dot net) to fix build on Make 3.82

Thu Oct 07 12:38:44 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/lexer.l: note that [^?] is may include newlines,
	  must explicitly exclude them
