@@ -10,6 +10,13 @@
 
   <!ENTITY manrevision "0.2">
 
+  <!ENTITY lt "&#60;">
+  <!ENTITY gt "&#62;">
+  <!ENTITY le "&#8804;">
+  <!ENTITY ge "&#8805;">
+  <!ENTITY lsquo "&#8216;">
+  <!ENTITY rsquo "&#8217;">
+
   <!ENTITY gel-function-list SYSTEM "gel-function-list.xml">
 ]>
 
@@ -31,7 +38,7 @@
 
     <copyright>
       <year>1997-2010</year>
-      <holder>Ji&#345;&iacute; (George) Lebl</holder>
+      <holder>Ji&#345;&#237; (George) Lebl</holder>
     </copyright>
     <copyright>
       <year>2004</year>
@@ -55,7 +62,7 @@
 
     <authorgroup> 
       <author role="maintainer"> 
-		<firstname>Ji&#345;&iacute;</firstname> 
+		<firstname>Ji&#345;&#237;</firstname> 
 		<surname>Lebl</surname> 
 		<affiliation> 
 	  		<orgname>University of Illinois, Urbana-Champaign</orgname> 
@@ -3050,7 +3057,7 @@ typsetting in LaTeX, MathML (XML), or in Troff.</para>
   <chapter id="genius-about"> 
     <title>About &app;</title> 
 
-    <para> &app; was written by Ji&#345;&iacute; (George) Lebl
+    <para> &app; was written by Ji&#345;&#237; (George) Lebl
 (<email>jirka@5z.com</email>).  The history of &app; goes back to late
 1997.  It was the first calculator program for GNOME, but it then grew
 beyond being just a desktop calculator.  To find more information about
@@ -3070,7 +3077,7 @@ type="http">Genius Web page</ulink>.
       <ulink url="ghelp:gpl" type="help">link</ulink>, or in the file
       COPYING included with the source code of this program. </para>
 
-    <para>Ji&#345;&iacute; Lebl was during various parts of the development
+    <para>Ji&#345;&#237; Lebl was during various parts of the development
       partially supported for the work by NSF grant DMS 0900885 and
       the University of Illinois at Urbana-Champaign.  The software has
       been used for both teaching and research.</para>
