@@ -1,3 +1,7 @@
+Tue Mar 29 01:41:20 2011  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/genius.xml: define missing entities
+
 Mon Mar 28 18:17:52 2011  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/calc.h, src/funclib.c, src/matrix.[ch],
